[package]
name = "algorithm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "p1"

[[bin]]
name = "p2"

[[bin]]
name = "p3"

[[bin]]
name = "p3_optimized"

[[bin]]
name = "p5"

[[bin]]
name = "p6"

[[bin]]
name = "p7"

[[bin]]
name = "p8"

[[bin]]
name = "p9"

[[bin]]
name = "p10"

[[bin]]
name = "p16"

[[bin]]
name = "p17"

[[bin]]
name = "p18"

[[bin]]
name = "p19"

[[bin]]
name = "p22"

[[bin]]
name = "p22_stack"

[[bin]]
name = "p26"

[[bin]]
name = "p27"

[dependencies]
