[package]
name = "algorithm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "p1"

[[bin]]
name = "p2"

[[bin]]
name = "p3"

[[bin]]
name = "p4"

[[bin]]
name = "p3_optimized"

[[bin]]
name = "p5"

[[bin]]
name = "p6"

[[bin]]
name = "p7"

[[bin]]
name = "p8"

[[bin]]
name = "p9"

[[bin]]
name = "p10"

[[bin]]
name = "p11"

[[bin]]
name = "p12"

[[bin]]
name = "p13"

[[bin]]
name = "p14"

[[bin]]
name = "p15"

[[bin]]
name = "p16"

[[bin]]
name = "p17"

[[bin]]
name = "p18"

[[bin]]
name = "p19"

[[bin]]
name = "p20"

[[bin]]
name = "p21"

[[bin]]
name = "p21_recursion"

[[bin]]
name = "p22"

[[bin]]
name = "p22_stack"

[[bin]]
name = "p23"

[[bin]]
name = "p23_iteration"

[[bin]]
name = "p24"

[[bin]]
name = "p24_recursion"

[[bin]]
name = "p24_stack"

[[bin]]
name = "p26"

[[bin]]
name = "p27"

[[bin]]
name = "p28"

[[bin]]
name = "p29"

[[bin]]
name = "p30"

[[bin]]
name = "p31"

[[bin]]
name = "p445"

[[bin]]
name = "p455_stack"

[dependencies]
